--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/kit": "^2.48.5",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"svelte": "^5.43.8",
+		"svelte-adapter-bun": "^1.0.1",
 		"svelte-check": "^4.3.4",
 		"typescript": "^5.9.3",
 		"vite": "^7.2.2"
@@ -23,6 +24,7 @@
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.17",
 		"gsap": "^3.13.0",
+		"lenis": "^1.3.15",
 		"tailwindcss": "^4.1.17"
 	}
 }
