--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"svelte-adapter-bun": "^1.0.1",
 		"svelte-check": "^4.3.4",
 		"typescript": "^5.9.3",
-		"vite": "^7.2.2"
+		"vite": "^7.2.2",
+		"@sveltejs/adapter-vercel": "^5.0.0"
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.17",
